force-app/main/default/objects/IdvSn_Enrollment_Status_Config__mdt/IdvSn_Enrollment_Status_Config__mdt.object-meta.xml
<CustomObject>
    <description>Individual session enrollment&apos;s enrollment status configuration</description>
    <label>IdvSn Enrollment Status Config</label>
    <pluralLabel>IdvSn Enrollment Status Config</pluralLabel>
</CustomObject>