force-app/main/default/objects/IdvSn_Enrollment_Status_Config__mdt/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <inlineHelpText>The option API value for the Enrollment Status field.</inlineHelpText>
    <label>Enrollment Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>